--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,4 +5,4 @@
 <p>body</p><%= @list.body %>
 
 
-<%= link_to'Edit',list_edit_path(@list.id) %>|<%= link_to'Back',home_path %>
+<%= link_to'Edit',edit_book_path(@list.id) %>|<%= link_to'Back',books_path %>
