--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -5,5 +5,5 @@
 
 <p class="p">印象を共有し交換することができます</p>
 
-<p class="p"><%= link_to'start',home_path %></p>
+<p class="p"><%= link_to'start',books_path %></p>
 </div>
